change references to spec versions to use yearly naming scheme

--- a/es2017.md
+++ b/es2017.md
@@ -1,4 +1,4 @@
-This document specifies the extensions to the core ESTree AST types to support the ES8/ES2017 grammar.
+This document specifies the extensions to the core ESTree AST types to support the ES2017 grammar.
 
 ## Function
 
