--- a/es2015.md
+++ b/es2015.md
@@ -124,7 +124,13 @@ extend interface AssignmentExpression {
 }
 ```
 
-Note that pre-ES6 code was allowed [to pass references around](https://github.com/estree/estree/pull/20#issuecomment-74584758) and so `left` was much more liberal; an implementation might choose to continue using [old definition](https://github.com/estree/estree/blob/master/es5.md#assignmentexpression) if it needs to support such legacy code.
+```js
+extend interface UpdateExpression {
+    argument: Pattern;
+}
+```
+
+Note that pre-ES6 code was allowed [to return references from call and new expressions](https://github.com/estree/estree/pull/20#issuecomment-74584758) and so assignment target was much more liberal; an implementation might choose to continue using [old definition](https://github.com/estree/estree/blob/master/es5.md#assignmentexpression) if it needs to support such legacy code.
 
 ```js
 extend interface Property {
