Fix a mistake of mine.
Somehow missed this a while back...

--- a/es2015.md
+++ b/es2015.md
@@ -359,6 +359,7 @@ A default import specifier, e.g., `foo` in `import foo from "mod.js"`.
 ```js
 interface ImportNamespaceSpecifier <: ModuleSpecifier {
     type: "ImportNamespaceSpecifier";
+    local: Identifier;
 }
 ```
 
