Fix arrow function body for directives
3d0f13b7 changed the body of `FunctionExpression` and `FunctionDeclaration` `FunctionBody`, but didn't `ArrowFunctionExpression`'s. This commit fixes the body of `ArrowFunctionExpression`.

--- a/es2015.md
+++ b/es2015.md
@@ -140,7 +140,7 @@ extend interface Property {
 ```js
 interface ArrowFunctionExpression <: Function, Expression {
     type: "ArrowFunctionExpression";
-    body: BlockStatement | Expression;
+    body: FunctionBody | Expression;
     expression: boolean;
 }
 ```
