--- a/es2015.md
+++ b/es2015.md
@@ -395,9 +395,19 @@ An exported variable binding, e.g., `{foo}` in `export {foo}` or `{bar as foo}` 
 ### ExportDefaultDeclaration
 
 ```js
+interface AnonymousDefaultExportedFunctionDeclaration <: Function {
+    type: "FunctionDeclaration";
+    id: null;
+}
+
+interface AnonymousDefaultExportedClassDeclaration <: Class {
+    type: "ClassDeclaration";
+    id: null;
+}
+
 interface ExportDefaultDeclaration <: ModuleDeclaration {
     type: "ExportDefaultDeclaration";
-    declaration: Declaration | Expression;
+    declaration: AnonymousDefaultExportedFunctionDeclaration | FunctionDeclaration | AnonymousDefaultExportedClassDeclaration | ClassDeclaration | Expression;
 }
 ```
 
