Properly include SpreadElement in NewExpression arguments.

--- a/es2015.md
+++ b/es2015.md
@@ -112,6 +112,10 @@ extend interface ArrayExpression {
 extend interface CallExpression {
     arguments: [ Expression | SpreadElement ];
 }
+
+extend interface NewExpression {
+    arguments: [ Expression | SpreadElement ];
+}
 ```
 
 Spread expression, e.g., `[head, ...iter, tail]`, `f(head, ...iter, ...tail)`.
