Move async-iteration to es2018

--- a/es2018.md
+++ b/es2018.md
@@ -1,5 +1,15 @@
 This document specifies the extensions to the core ESTree AST types to support the ES2018 grammar.
 
+# Statements
+
+```js
+extend interface ForOfStatement {
+  await: boolean;
+}
+```
+
+`for-await-of` statements, e.g., `for await (const x of xs) {`
+
 # Expressions
 
 ```js
