Move invalid-tagged-template-escapes to es2018

--- a/es2018.md
+++ b/es2018.md
@@ -20,6 +20,19 @@ extend interface ObjectExpression {
 
 Spread properties, e.g., `{a: 1, ...obj, b: 2}`.
 
+# Template Literals
+
+```js
+extend interface TemplateElement {
+    value: {
+        cooked: string | null;
+        raw: string;
+    };
+}
+```
+
+Lifting Template Literal Restriction, e.g., ``tag`\unicode and \u{55}` ``
+
 # Patterns
 
 ```js
