--- a/es2018.md
+++ b/es2018.md
@@ -31,7 +31,7 @@ extend interface TemplateElement {
 }
 ```
 
-Lifting Template Literal Restriction, e.g., ``tag`\unicode and \u{55}` ``
+If the template literal is tagged and the text has an invalid escape, `cooked` will be `null`, e.g., ``tag`\unicode and \u{55}` ``
 
 # Patterns
 
