--- a/es2019.md
+++ b/es2019.md
@@ -5,10 +5,8 @@ This document specifies the extensions to the core ESTree AST types to support t
 ## CatchClause
 
 ```js
-interface CatchClause <: Node {
-    type: "CatchClause";
+extend interface CatchClause {
     param: Pattern | null;
-    body: BlockStatement;
 }
 ```
 
