--- a/es2020.md
+++ b/es2020.md
@@ -9,7 +9,7 @@ extend interface Literal <: Expression {
 }
 ```
 
-- `value` property can be a `BitInt` value to represent `BitInt` literals
+- `value` property can be a `BigInt` value to represent `BigInt` literals
   such as `100n`.
 
 ## BigIntLiteral
@@ -20,9 +20,9 @@ interface BigIntLiteral <: Literal {
 }
 ```
 
-- `bigint` property is the string representation of the `BitInt` value.
+- `bigint` property is the string representation of the `BigInt` value.
   It includes the suffix `n`.
-- In environments that don't support `BitInt` values, `value` property will be
+- In environments that don't support `BigInt` values, `value` property will be
   `null` as the `BigInt` value can't be represented natively.
 
 # Expressions
