--- a/es2020.md
+++ b/es2020.md
@@ -21,7 +21,7 @@ interface BigIntLiteral <: Literal {
 ```
 
 - `bigint` property is the string representation of the `BigInt` value.
-  It includes the suffix `n`.
+  It doesn't include the suffix `n`.
 - In environments that don't support `BigInt` values, `value` property will be
   `null` as the `BigInt` value can't be represented natively.
 
