change dynamic imports AST

--- a/es2020.md
+++ b/es2020.md
@@ -27,22 +27,17 @@ interface BigIntLiteral <: Literal {
 
 # Expressions
 
-## CallExpression
+## ImportExpression
 
 ```js
-interface Import <: Node {
-    type: "Import";
+interface ImportExpression <: Expression {
+  type: "ImportExpression";
+  source: Expression;
 }
 ```
 
-```js
-extend interface CallExpression <: Expression {
-  callee: Expression | Super | Import;
-}
-```
+- `ImportExpression` node represents Dynamic Imports such as `import(source)`.
+  The `source` property is the importing source as similar to [ImprotDeclaration]
+  node, but it can be an arbitrary expression node.
 
-- `callee` property can be an `Import` node to represent dynamic import syntax.
-  E.g. `import(source)`.
-- If the `callee` property was an `Import` node, `arguments` property must be an
-  array that that length is `1`. The first element represents the importing
-  source.
+[ImprotDeclaration]: es2015.md#importdeclaration
