--- a/es2020.md
+++ b/es2020.md
@@ -37,7 +37,7 @@ interface ImportExpression <: Expression {
 ```
 
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
-  The `source` property is the importing source as similar to [ImprotDeclaration]
+  The `source` property is the importing source as similar to [ImportExpression]
   node, but it can be an arbitrary expression node.
 
-[ImprotDeclaration]: es2015.md#importdeclaration
+[ImportExpression]: es2015.md#importdeclaration
