Use the extend syntax on ExportAllDeclaration interface

--- a/es2020.md
+++ b/es2020.md
@@ -47,9 +47,7 @@ interface ImportExpression <: Expression {
 ##  ExportAllDeclaration
 
 ```js
-interface ExportAllDeclaration <: ModuleDeclaration {
-  type: "ExportAllDeclaration";
-  source: Literal;
+extend interface ExportAllDeclaration {
   exported: Identifier | null;
 }
 ```
