Add latest.md, fix typo in es2020.md

--- a/es2020.md
+++ b/es2020.md
@@ -37,7 +37,7 @@ interface ImportExpression <: Expression {
 ```
 
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
-  The `source` property is the importing source as similar to [ImportExpression]
+  The `source` property is the importing source as in the [ImportDeclaration]
   node, but it can be an arbitrary expression node.
 
-[ImportExpression]: es2015.md#importdeclaration
+[ImportDeclaration]: es2015.md#importdeclaration
