--- a/es2020.md
+++ b/es2020.md
@@ -41,3 +41,14 @@ interface ImportExpression <: Expression {
   node, but it can be an arbitrary expression node.
 
 [ImportExpression]: es2015.md#importdeclaration
+
+# Modules
+
+##  ExportAllDeclaration
+
+```js
+extend interface ExportAllDeclaration {
+  exported: Identifier | null;
+}
+```
+The `exported` property contains an `Identifier` when a different exported name is specified using `as`, e.g., `export * as foo from "mod";`.
