--- a/es2020.md
+++ b/es2020.md
@@ -37,10 +37,12 @@ interface ImportExpression <: Expression {
 ```
 
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
-  The `source` property is the importing source as similar to [ImportExpression]
+  The `source` property is the importing source as similar to [ImportDeclaration]
   node, but it can be an arbitrary expression node.
 
-[ImportExpression]: es2015.md#importdeclaration
+## MetaProperty
+
+Existing [MetaProperty] node represents `import.meta` meta property as well.
 
 # Modules
 
@@ -52,3 +54,6 @@ extend interface ExportAllDeclaration {
 }
 ```
 The `exported` property contains an `Identifier` when a different exported name is specified using `as`, e.g., `export * as foo from "mod";`.
+
+[ImportDeclaration]: es2015.md#importdeclaration
+[MetaProperty]: es2015.md#metaproperty
