mention new.target in MetaProperty node

--- a/es2015.md
+++ b/es2015.md
@@ -303,6 +303,8 @@ interface MetaProperty <: Expression {
 }
 ```
 
+- `MetaProperty` node represents `new.target` meta property in ES2015. In the future, it will represent other meta properties as well.
+
 # Modules
 
 ## ModuleDeclaration
