Add nullish coalescing support
As mentioned on #204, the discussion on that PR has grew too much, so splitting out the uncontroversial `??` part into a separate PR to get it unblocked faster. (cc @mysticatea)

--- a/es2020.md
+++ b/es2020.md
@@ -39,6 +39,16 @@ interface ImportExpression <: Expression {
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
   The `source` property is the importing source as similar to [ImportDeclaration]
   node, but it can be an arbitrary expression node.
+  
+## LogicalExpression
+
+```js
+extend enum LogicalOperator {
+    "||" | "&&" | "??"
+}
+```
+
+- The `operator` property of the `LogicalExpression` node can be `"??"` to represent [Nullish Coalescing] syntax.
 
 ## MetaProperty
 
@@ -57,3 +67,4 @@ The `exported` property contains an `Identifier` when a different exported name 
 
 [ImportDeclaration]: es2015.md#importdeclaration
 [MetaProperty]: es2015.md#metaproperty
+[Nullish Coalescing]: https://github.com/tc39/proposal-nullish-coalescing
