--- a/es2020.md
+++ b/es2020.md
@@ -27,6 +27,50 @@ interface BigIntLiteral <: Literal {
 
 # Expressions
 
+## ChainingExpression
+
+```js
+interface ChainingExpression extends Expression {
+  type: "ChainingExpression"
+  base: Expression
+  chain: [ Chain ] //< requires one element at least
+}
+
+interface Chain extends Node {
+  optional: boolean
+}
+
+interface MemberChain extends Chain {
+  type: "MemberChain"
+  computed: boolean
+  property: Expression
+}
+
+interface CallChain extends Chain {
+  type: "CallChain"
+  arguments: [ Expression ]
+}
+```
+
+- The `ChainingExpression` node represents the chain of member accesses and
+  function calls. This node is introduced to represent parentheses that
+  `MemberExpression` cannot represent.
+- The `MemberChain` and `CallChain` nodes correspond the existing
+  `MemberExpression` and `CallExpression` nodes, but the `object` and `callee`
+  properties don't exist.
+  The `base` property of the `ChainingExpression` node is the object/callee of
+  the first chain element, and the result of the first chain is the
+  object/callee of the second chain element, and then chaining it to the last
+  chain. If a chain is `optional:true` and the current object/callee is nullish,
+  stop the chaining and the result of the `ChainingExpression` node becomes
+  `undefined`.
+- For backward compatibility, the left of optional chain element is represented
+  by the `MemberExpression` and `CallExpression` nodes as in the past.
+  Therefore, the `base` property of the `ChainingExpression` node can be a
+  `MemberExpression` or `CallExpression` node. And the first chain element is
+  always `optional:true`.
+- See also for examples: https://gist.github.com/mysticatea/f3a87f3e02632797ec59d9b447fdf05e
+
 ## ImportExpression
 
 ```js
@@ -39,7 +83,7 @@ interface ImportExpression <: Expression {
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
   The `source` property is the importing source as similar to [ImportDeclaration]
   node, but it can be an arbitrary expression node.
-  
+
 ## LogicalExpression
 
 ```js
