--- a/es2020.md
+++ b/es2020.md
@@ -27,49 +27,173 @@ interface BigIntLiteral <: Literal {
 
 # Expressions
 
-## ChainingExpression
+## ChainExpression
 
 ```js
-interface ChainingExpression extends Expression {
-  type: "ChainingExpression"
-  base: Expression
-  chain: [ Chain ] //< requires one element at least
+interface ChainExpression <: Expression {
+  type: "ChainExpression"
+  expression: ChainElement
 }
 
-interface Chain extends Node {
+interface ChainElement <: Node {
   optional: boolean
 }
 
-interface MemberChain extends Chain {
-  type: "MemberChain"
-  computed: boolean
-  property: Expression
-}
+extend interface CallExpression <: ChainElement {}
+extend interface MemberExpression <: ChainElement {}
+```
 
-interface CallChain extends Chain {
-  type: "CallChain"
-  arguments: [ Expression ]
+- The `ChainExpression` node is the root of optional chaining.
+- The `ChainExpression` node contains one or more `ChainElement` nodes where are `optional:true`. On the other hand, `ChainElement` nodes where are `optional:true` belong to a `ChainExpression` node.
+- For backward compatibility, if all `ChainElement` nodes of a chain are `optional:false`, the `ChainExpression` node isn't inserted as the root of the chain.
+- Evaluation:
+  - The `ChainExpression` node is evaluated to the result of the `expression` property's node.
+  - If the `callee|object` property is evaluated to nullish and the `optional` property is `true`, then the node and ancestor nodes are skipped until the closest `ChainExpression` node, and the result of the `ChainExpression` node becomes `undefined`.
+
+<details><summary>For Examples:</summary>
+
+```jsonc
+// obj.aaa.bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": { "type": "Identifier", "name": "obj" },
+    "property": { "type": "Identifier", "name": "aaa" }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
 }
 ```
 
-- The `ChainingExpression` node represents the chain of member accesses and
-  function calls. This node is introduced to represent parentheses that
-  `MemberExpression` cannot represent.
-- The `MemberChain` and `CallChain` nodes correspond the existing
-  `MemberExpression` and `CallExpression` nodes, but the `object` and `callee`
-  properties don't exist.
-  The `base` property of the `ChainingExpression` node is the object/callee of
-  the first chain element, and the result of the first chain is the
-  object/callee of the second chain element, and then chaining it to the last
-  chain. If a chain is `optional:true` and the current object/callee is nullish,
-  stop the chaining and the result of the `ChainingExpression` node becomes
-  `undefined`.
-- For backward compatibility, the left of optional chain element is represented
-  by the `MemberExpression` and `CallExpression` nodes as in the past.
-  Therefore, the `base` property of the `ChainingExpression` node can be a
-  `MemberExpression` or `CallExpression` node. And the first chain element is
-  always `optional:true`.
-- See also for examples: https://gist.github.com/mysticatea/f3a87f3e02632797ec59d9b447fdf05e
+```jsonc
+// obj.aaa?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": false,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// obj?.aaa.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// obj?.aaa?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// (obj.aaa).bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": { "type": "Identifier", "name": "obj" },
+    "property": { "type": "Identifier", "name": "aaa" }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
+}
+```
+
+```jsonc
+// (obj.aaa)?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": false,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// (obj?.aaa).bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "ChainExpression",
+    "expression": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
+}
+```
+
+```jsonc
+// (obj?.aaa)?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "ChainExpression",
+      "expression": {
+        "type": "MemberExpression",
+        "optional": true,
+        "object": { "type": "Identifier", "name": "obj" },
+        "property": { "type": "Identifier", "name": "aaa" }
+      }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+</details>
 
 ## ImportExpression
 
