fix "where are" → "that are"

--- a/es2020.md
+++ b/es2020.md
@@ -44,7 +44,7 @@ extend interface MemberExpression <: ChainElement {}
 ```
 
 - The `ChainExpression` node is the root of optional chaining.
-- The `ChainExpression` node contains one or more `ChainElement` nodes where are `optional:true`. On the other hand, `ChainElement` nodes where are `optional:true` belong to a `ChainExpression` node.
+- The `ChainExpression` node contains one or more `ChainElement` nodes that are `optional:true`. On the other hand, `ChainElement` nodes that are `optional:true` belong to a `ChainExpression` node.
 - For backward compatibility, if all `ChainElement` nodes of a chain are `optional:false`, the `ChainExpression` node isn't inserted as the root of the chain.
 - Evaluation:
   - The `ChainExpression` node is evaluated to the result of the `expression` property's node.
