Add optional chaining (#204)
* add ChainingExpression

* update es2020.md

* fix "where are" → "that are"

--- a/es2020.md
+++ b/es2020.md
@@ -27,6 +27,174 @@ interface BigIntLiteral <: Literal {
 
 # Expressions
 
+## ChainExpression
+
+```js
+interface ChainExpression <: Expression {
+  type: "ChainExpression"
+  expression: ChainElement
+}
+
+interface ChainElement <: Node {
+  optional: boolean
+}
+
+extend interface CallExpression <: ChainElement {}
+extend interface MemberExpression <: ChainElement {}
+```
+
+- The `ChainExpression` node is the root of optional chaining.
+- The `ChainExpression` node contains one or more `ChainElement` nodes that are `optional:true`. On the other hand, `ChainElement` nodes that are `optional:true` belong to a `ChainExpression` node.
+- For backward compatibility, if all `ChainElement` nodes of a chain are `optional:false`, the `ChainExpression` node isn't inserted as the root of the chain.
+- Evaluation:
+  - The `ChainExpression` node is evaluated to the result of the `expression` property's node.
+  - If the `callee|object` property is evaluated to nullish and the `optional` property is `true`, then the node and ancestor nodes are skipped until the closest `ChainExpression` node, and the result of the `ChainExpression` node becomes `undefined`.
+
+<details><summary>For Examples:</summary>
+
+```jsonc
+// obj.aaa.bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": { "type": "Identifier", "name": "obj" },
+    "property": { "type": "Identifier", "name": "aaa" }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
+}
+```
+
+```jsonc
+// obj.aaa?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": false,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// obj?.aaa.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// obj?.aaa?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// (obj.aaa).bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "MemberExpression",
+    "optional": false,
+    "object": { "type": "Identifier", "name": "obj" },
+    "property": { "type": "Identifier", "name": "aaa" }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
+}
+```
+
+```jsonc
+// (obj.aaa)?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "MemberExpression",
+      "optional": false,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+```jsonc
+// (obj?.aaa).bbb
+{
+  "type": "MemberExpression",
+  "optional": false,
+  "object": {
+    "type": "ChainExpression",
+    "expression": {
+      "type": "MemberExpression",
+      "optional": true,
+      "object": { "type": "Identifier", "name": "obj" },
+      "property": { "type": "Identifier", "name": "aaa" }
+    }
+  },
+  "property": { "type": "Identifier", "name": "bbb" }
+}
+```
+
+```jsonc
+// (obj?.aaa)?.bbb
+{
+  "type": "ChainExpression",
+  "expression": {
+    "type": "MemberExpression",
+    "optional": true,
+    "object": {
+      "type": "ChainExpression",
+      "expression": {
+        "type": "MemberExpression",
+        "optional": true,
+        "object": { "type": "Identifier", "name": "obj" },
+        "property": { "type": "Identifier", "name": "aaa" }
+      }
+    },
+    "property": { "type": "Identifier", "name": "bbb" }
+  }
+}
+```
+
+</details>
+
 ## ImportExpression
 
 ```js
@@ -39,7 +207,7 @@ interface ImportExpression <: Expression {
 - `ImportExpression` node represents Dynamic Imports such as `import(source)`.
   The `source` property is the importing source as similar to [ImportDeclaration]
   node, but it can be an arbitrary expression node.
-  
+
 ## LogicalExpression
 
 ```js
