--- a/es2022.md
+++ b/es2022.md
@@ -1,3 +1,5 @@
+This document specifies the extensions to the core ESTree AST types to support the ES2022 grammar.
+
 # Classes
 
 These language extensions cover three class features proposals:
