privateIn reaches stage 4

--- a/es2022.md
+++ b/es2022.md
@@ -57,6 +57,20 @@ extend interface MemberExpression {
 - When `property` is a `PrivateIdentifier`, `computed` must be `false`.
 - When `object` is a `Super`, `property` can not be a `PrivateIdentifier`.
 
+## Expressions
+
+### BinaryExpression
+
+```js
+extend interface BinaryExpression <: Expression {
+    left: Expression | PrivateIdentifier;
+}
+```
+
+- `left` can be a private identifier (e.g. `#foo`) when `operator` is `"in"`.
+- See [Ergonomic brand checks for Private Fields][proposal-private-fields-in-in] for details.
+
 [Class Fields]: https://github.com/tc39/proposal-class-fields
 [Static Class Features]: https://github.com/tc39/proposal-static-class-features/
 [Private Methods]: https://github.com/tc39/proposal-private-methods
+[proposal-private-fields-in-in]: https://github.com/tc39/proposal-private-fields-in-in
