feat: move static blocks to es2022

--- a/es2022.md
+++ b/es2022.md
@@ -2,14 +2,14 @@ This document specifies the extensions to the core ESTree AST types to support t
 
 # Classes
 
-These language extensions cover three class features proposals:
-[Class Fields], [Static Class Features] and [Private Methods].
+These language extensions cover 4 class features proposals:
+[Class Fields], [Static Class Features], [Private Methods] and [Static Initialization Blocks].
 
 ## ClassBody
 
 ```js
 extend interface ClassBody {
-    body: [ MethodDefinition | PropertyDefinition ];
+    body: [ MethodDefinition | PropertyDefinition | StaticBlock ];
 }
 ```
 
@@ -57,6 +57,16 @@ extend interface MemberExpression {
 - When `property` is a `PrivateIdentifier`, `computed` must be `false`.
 - When `object` is a `Super`, `property` can not be a `PrivateIdentifier`.
 
+## StaticBlock
+
+```js
+interface StaticBlock <: BlockStatement {
+    type: "StaticBlock"
+}
+```
+
+A static block `static { }` is a block statement served as an additional static initializer.
+
 ## Expressions
 
 ### BinaryExpression
@@ -70,7 +80,8 @@ extend interface BinaryExpression <: Expression {
 - `left` can be a private identifier (e.g. `#foo`) when `operator` is `"in"`.
 - See [Ergonomic brand checks for Private Fields][proposal-private-fields-in-in] for details.
 
-[Class Fields]: https://github.com/tc39/proposal-class-fields
-[Static Class Features]: https://github.com/tc39/proposal-static-class-features/
-[Private Methods]: https://github.com/tc39/proposal-private-methods
+[class fields]: https://github.com/tc39/proposal-class-fields
+[static class features]: https://github.com/tc39/proposal-static-class-features/
+[private methods]: https://github.com/tc39/proposal-private-methods
 [proposal-private-fields-in-in]: https://github.com/tc39/proposal-private-fields-in-in
+[static initialization blocks]: https://github.com/tc39/proposal-class-static-block
