Apply suggestions from code review
Co-authored-by: Jed Fox <git@jedfox.com>

--- a/es2022.md
+++ b/es2022.md
@@ -65,7 +65,7 @@ interface StaticBlock <: BlockStatement {
 }
 ```
 
-A static block `static { }` is a block statement served as an additional static initializer.
+A static block `static { }` is a block statement serving as an additional static initializer.
 
 ## Expressions
 
