--- a/es2022.md
+++ b/es2022.md
@@ -2,8 +2,11 @@ This document specifies the extensions to the core ESTree AST types to support t
 
 # Classes
 
-These language extensions cover 4 class features proposals:
-[Class Fields], [Static Class Features], [Private Methods] and [Static Initialization Blocks].
+These language extensions cover following class features proposals:
+ - [Class Fields]
+ - [Static Class Features]
+ - [Private Methods]
+ - [Static Initialization Blocks].
 
 ## ClassBody
 
