--- a/es2015.md
+++ b/es2015.md
@@ -146,6 +146,7 @@ interface ArrowFunctionExpression <: Function, Expression {
     type: "ArrowFunctionExpression";
     body: FunctionBody | Expression;
     expression: boolean;
+    generator: false;
 }
 ```
 
