--- a/es2017.md
+++ b/es2017.md
@@ -7,6 +7,14 @@ extend interface Function {
     async: boolean;
 }
 ```
+## MethodDefinition
+
+```js
+extend interface MethodDefinition {
+   async: boolean;
+}
+```
+Note that `constructor` kind can't be an async method
 
 ## AwaitExpression
 
