Add for ES2022 normative change

--- a/es2022.md
+++ b/es2022.md
@@ -83,6 +83,33 @@ extend interface BinaryExpression <: Expression {
 - `left` can be a private identifier (e.g. `#foo`) when `operator` is `"in"`.
 - See [Ergonomic brand checks for Private Fields][proposal-private-fields-in-in] for details.
 
+# Modules
+
+See https://github.com/tc39/ecma262/pull/2154 for more details.
+
+## Imports
+
+### ImportSpecifier
+
+```js
+extend interface ImportSpecifier <: ModuleSpecifier {
+    imported: Identifier | Literal;
+}
+```
+
+## Exports
+
+### ExportSpecifier
+
+```js
+extend interface ExportSpecifier <: ModuleSpecifier {
+    local: Identifier | Literal;
+    exported: Identifier | Literal;
+}
+```
+
+`exported` and `local` can be `Literal` only if the `source` of the `ExportNamedDeclaration` of the parent of this node is not `null`. e.g. `export { "foo" as "foo"} from "mod"` is valid, `export { "foo" as "foo"}` is invalid.
+
 [class fields]: https://github.com/tc39/proposal-class-fields
 [static class features]: https://github.com/tc39/proposal-static-class-features/
 [private methods]: https://github.com/tc39/proposal-private-methods
