Add link for the PR

--- a/es2022.md
+++ b/es2022.md
@@ -85,7 +85,7 @@ extend interface BinaryExpression <: Expression {
 
 # Modules
 
-See https://github.com/tc39/ecma262/pull/2154 for more details.
+See [Arbitrary module namespace identifier names] for more details.
 
 ## Imports
 
@@ -115,3 +115,4 @@ extend interface ExportSpecifier <: ModuleSpecifier {
 [private methods]: https://github.com/tc39/proposal-private-methods
 [proposal-private-fields-in-in]: https://github.com/tc39/proposal-private-fields-in-in
 [static initialization blocks]: https://github.com/tc39/proposal-class-static-block
+[arbitrary module namespace identifier names]: https://github.com/tc39/ecma262/pull/2154
