Add note for lone surrogate

--- a/es2022.md
+++ b/es2022.md
@@ -97,6 +97,8 @@ extend interface ImportSpecifier <: ModuleSpecifier {
 }
 ```
 
+If `imported` is a `Literal`, `imported.value` must be a string without lone surrogate.
+
 ## Exports
 
 ### ExportSpecifier
@@ -109,6 +111,8 @@ extend interface ExportSpecifier <: ModuleSpecifier {
 ```
 
 `exported` and `local` can be `Literal` only if the `source` of the `ExportNamedDeclaration` of the parent of this node is not `null`. e.g. `export { "foo" as "foo"} from "mod"` is valid, `export { "foo" as "foo"}` is invalid.
+
+If `exported`/`local` is `Literal`, `exported.value`/`local.value` must be a string without lone surrogate.
 
 [class fields]: https://github.com/tc39/proposal-class-fields
 [static class features]: https://github.com/tc39/proposal-static-class-features/
