--- a/es2022.md
+++ b/es2022.md
@@ -110,7 +110,7 @@ extend interface ExportSpecifier <: ModuleSpecifier {
 }
 ```
 
-`exported` and `local` can be `Literal` only if the `source` of the `ExportNamedDeclaration` of the parent of this node is not `null`. e.g. `export { "foo" as "foo"} from "mod"` is valid, `export { "foo" as "foo"}` is invalid.
+`local` can be `Literal` only if the `source` of the `ExportNamedDeclaration` of the parent of this node is not `null`. e.g. `export { "foo" as "foo" } from "mod"` is valid, `export { "foo" as "foo" }` is invalid.
 
 If `exported`/`local` is `Literal`, `exported.value`/`local.value` must be a string without lone surrogate.
 
