--- a/es2022.md
+++ b/es2022.md
@@ -114,6 +114,16 @@ extend interface ExportSpecifier <: ModuleSpecifier {
 
 If `exported`/`local` is `Literal`, `exported.value`/`local.value` must be a string without lone surrogate.
 
+### ExportAllDeclaration
+
+```js
+extends interface ExportAllDeclaration {
+    exported: Identifier | Literal | null
+}
+```
+
+If `exported` is `Literal`, `exported.value` must be a string without lone surrogate.
+
 [class fields]: https://github.com/tc39/proposal-class-fields
 [static class features]: https://github.com/tc39/proposal-static-class-features/
 [private methods]: https://github.com/tc39/proposal-private-methods
