js->ts;remove hard break line; tsonc -> js+json

--- a/es2020.md
+++ b/es2020.md
@@ -2,34 +2,32 @@ This document specifies the extensions to the core ESTree AST types to support t
 
 # Literal
 
-```js
+```ts
 extend interface Literal <: Expression {
     type: "Literal";
     value: string | boolean | null | number | RegExp | bigint;
 }
 ```
 
-- `value` property can be a `BigInt` value to represent `BigInt` literals
-  such as `100n`.
+- `value` property can be a `BigInt` value to represent `BigInt` literals such as `100n`.
 
 ## BigIntLiteral
 
-```js
+```ts
 interface BigIntLiteral <: Literal {
   bigint: string;
 }
 ```
 
-- `bigint` property is the string representation of the `BigInt` value.
-  It doesn't include the suffix `n`.
-- In environments that don't support `BigInt` values, `value` property will be
-  `null` as the `BigInt` value can't be represented natively.
+- `bigint` property is the string representation of the `BigInt` value. It doesn't include the suffix `n`.
+
+- In environments that don't support `BigInt` values, `value` property will be `null` as the `BigInt` value can't be represented natively.
 
 # Expressions
 
 ## ChainExpression
 
-```js
+```ts
 interface ChainExpression <: Expression {
   type: "ChainExpression";
   expression: ChainElement;
@@ -53,8 +51,12 @@ extend interface MemberExpression <: ChainElement {}
 
 <details><summary>For Examples:</summary>
 
-```jsonc
+```js
 // obj.aaa.bbb
+```
+
+```json
+
 {
   "type": "MemberExpression",
   "optional": false,
@@ -68,8 +70,14 @@ extend interface MemberExpression <: ChainElement {}
 }
 ```
 
-```jsonc
+---
+
+```js
 // obj.aaa?.bbb
+```
+
+```json
+
 {
   "type": "ChainExpression",
   "expression": {
@@ -85,9 +93,14 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+---
 
-```jsonc
+```js
 // obj?.aaa.bbb
+```
+
+```json
+
 {
   "type": "ChainExpression",
   "expression": {
@@ -103,9 +116,14 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+---
 
-```jsonc
+```js
 // obj?.aaa?.bbb
+```
+
+```json
+
 {
   "type": "ChainExpression",
   "expression": {
@@ -121,9 +139,14 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+---
 
-```jsonc
+```js
 // (obj.aaa).bbb
+```
+
+```json
+
 {
   "type": "MemberExpression",
   "optional": false,
@@ -136,9 +159,14 @@ extend interface MemberExpression <: ChainElement {}
   "property": { "type": "Identifier", "name": "bbb" }
 }
 ```
+---
 
-```jsonc
+```js
 // (obj.aaa)?.bbb
+```
+
+```json
+
 {
   "type": "ChainExpression",
   "expression": {
@@ -154,9 +182,14 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+---
 
-```jsonc
+```js
 // (obj?.aaa).bbb
+```
+
+```json
+
 {
   "type": "MemberExpression",
   "optional": false,
@@ -172,9 +205,14 @@ extend interface MemberExpression <: ChainElement {}
   "property": { "type": "Identifier", "name": "bbb" }
 }
 ```
+---
 
-```jsonc
+```js
 // (obj?.aaa)?.bbb
+```
+
+```json
+
 {
   "type": "ChainExpression",
   "expression": {
@@ -198,20 +236,18 @@ extend interface MemberExpression <: ChainElement {}
 
 ## ImportExpression
 
-```js
+```ts
 interface ImportExpression <: Expression {
   type: "ImportExpression";
   source: Expression;
 }
 ```
 
-- `ImportExpression` node represents Dynamic Imports such as `import(source)`.
-  The `source` property is the importing source as similar to [ImportDeclaration]
-  node, but it can be an arbitrary expression node.
+- `ImportExpression` node represents Dynamic Imports such as `import(source)`. The `source` property is the importing source as similar to [ImportDeclaration] node, but it can be an arbitrary expression node.
 
 ## LogicalExpression
 
-```js
+```ts
 extend enum LogicalOperator {
     "||" | "&&" | "??"
 }
@@ -227,7 +263,7 @@ Existing [MetaProperty] node represents `import.meta` meta property as well.
 
 ##  ExportAllDeclaration
 
-```js
+```ts
 extend interface ExportAllDeclaration {
   exported: Identifier | null;
 }
