--- a/es2020.md
+++ b/es2020.md
@@ -52,7 +52,7 @@ extend interface MemberExpression <: ChainElement {}
 <details><summary>For Examples:</summary>
 
 ```js
-// obj.aaa.bbb
+obj.aaa.bbb
 ```
 
 ```json
@@ -73,7 +73,7 @@ extend interface MemberExpression <: ChainElement {}
 ---
 
 ```js
-// obj.aaa?.bbb
+obj.aaa?.bbb
 ```
 
 ```json
@@ -93,10 +93,11 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+
 ---
 
 ```js
-// obj?.aaa.bbb
+obj?.aaa.bbb
 ```
 
 ```json
@@ -116,10 +117,11 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+
 ---
 
 ```js
-// obj?.aaa?.bbb
+obj?.aaa?.bbb
 ```
 
 ```json
@@ -139,10 +141,11 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+
 ---
 
 ```js
-// (obj.aaa).bbb
+(obj.aaa).bbb
 ```
 
 ```json
@@ -159,10 +162,11 @@ extend interface MemberExpression <: ChainElement {}
   "property": { "type": "Identifier", "name": "bbb" }
 }
 ```
+
 ---
 
 ```js
-// (obj.aaa)?.bbb
+(obj.aaa)?.bbb
 ```
 
 ```json
@@ -182,10 +186,11 @@ extend interface MemberExpression <: ChainElement {}
   }
 }
 ```
+
 ---
 
 ```js
-// (obj?.aaa).bbb
+(obj?.aaa).bbb
 ```
 
 ```json
@@ -205,10 +210,11 @@ extend interface MemberExpression <: ChainElement {}
   "property": { "type": "Identifier", "name": "bbb" }
 }
 ```
+
 ---
 
 ```js
-// (obj?.aaa)?.bbb
+(obj?.aaa)?.bbb
 ```
 
 ```json
