--- a/es2022.md
+++ b/es2022.md
@@ -64,7 +64,7 @@ extend interface MemberExpression {
 
 ```js
 interface StaticBlock <: BlockStatement {
-    type: "StaticBlock"
+    type: "StaticBlock";
 }
 ```
 
@@ -118,7 +118,7 @@ If `exported`/`local` is `Literal`, `exported.value`/`local.value` must be a str
 
 ```js
 extend interface ExportAllDeclaration {
-    exported: Identifier | Literal | null
+    exported: Identifier | Literal | null;
 }
 ```
 
