--- a/es2020.md
+++ b/es2020.md
@@ -3,8 +3,7 @@ This document specifies the extensions to the core ESTree AST types to support t
 # Literal
 
 ```js
-extend interface Literal <: Expression {
-    type: "Literal";
+extend interface Literal {
     value: string | boolean | null | number | RegExp | bigint;
 }
 ```
@@ -213,7 +212,7 @@ interface ImportExpression <: Expression {
 
 ```js
 extend enum LogicalOperator {
-    "||" | "&&" | "??"
+    "??"
 }
 ```
 
