--- a/es2022.md
+++ b/es2022.md
@@ -75,7 +75,7 @@ A static block `static { }` is a block statement serving as an additional static
 ### BinaryExpression
 
 ```js
-extend interface BinaryExpression <: Expression {
+extend interface BinaryExpression {
     left: Expression | PrivateIdentifier;
 }
 ```
@@ -92,7 +92,7 @@ See [Arbitrary module namespace identifier names] for more details.
 ### ImportSpecifier
 
 ```js
-extend interface ImportSpecifier <: ModuleSpecifier {
+extend interface ImportSpecifier {
     imported: Identifier | Literal;
 }
 ```
@@ -104,7 +104,7 @@ If `imported` is a `Literal`, `imported.value` must be a string without lone sur
 ### ExportSpecifier
 
 ```js
-extend interface ExportSpecifier <: ModuleSpecifier {
+extend interface ExportSpecifier {
     local: Identifier | Literal;
     exported: Identifier | Literal;
 }
