--- a/es2025.md
+++ b/es2025.md
@@ -1,4 +1,6 @@
-# [Import Attributes][proposal-import-attributes]
+This document specifies the extensions to the core ESTree AST types to support the ES2025 grammar.
+
+# Modules
 
 ## Imports
 
@@ -11,8 +13,6 @@ extend interface ImportDeclaration {
 ```
 
 The `attributes` is non-empty when import attributes present, e.g., `import foo from "./foo.json" with { type: "json" }`.
-
-Note: While the spec also supports `assert { type: "json" }`, it was considered legacy and thus not covered here. If you want to support the legacy syntax, please use [Import Assertions](../stage3/import-assertions.md) instead.
 
 ### ImportAttribute
 
@@ -46,9 +46,9 @@ extend interface ExportAllDeclaration {
 ```
 - `attributes` must be an empty array when `source` is `null`.
 
-## Expressions
+# Expressions
 
-### ImportExpression
+## ImportExpression
 
 ```js
 extend interface ImportExpression {
@@ -57,6 +57,3 @@ extend interface ImportExpression {
 ```
 
 The `options` property contains an `Expression` when import attributes presents, e.g., `{ with: { type: "json" } }` in `import(jsonModuleName, { with: { type: "json" } })`.
-
-[proposal-import-attributes]: https://github.com/tc39/proposal-import-attributes
-
