--- a/es2026.md
+++ b/es2026.md
@@ -1,4 +1,4 @@
-# [Explicit Resource Management][proposal-explicit-resource-management]
+This document specifies the extensions to the core ESTree AST types to support the ES2026 grammar.
 
 # Declarations
 
@@ -6,10 +6,8 @@
 
 ```js
 extend interface VariableDeclaration {
-    kind: "using" | "await using";
+    kind: "var" | "let" | "const" | "using" | "await using";
 }
 ```
 
 If `kind` is `"using"` or `"await using"`, for every declarator `d` of `declarations`, `d.id` must be an Identifier. If the variable declaration is the `left` of a ForOfStatement, `d.init` must be `null`, otherwise `d.init` must be an Expression.
-
-[proposal-explicit-resource-management]: https://github.com/tc39/proposal-explicit-resource-management
