mark decorators / attributes as nullable

--- a/es2025.md
+++ b/es2025.md
@@ -8,7 +8,7 @@ This document specifies the extensions to the core ESTree AST types to support t
 
 ```js
 extend interface ImportDeclaration {
-    attributes: [ ImportAttribute ];
+    attributes: [ ImportAttribute ] | null;
 }
 ```
 
