mark attributes to be nullable

--- a/es2025.md
+++ b/es2025.md
@@ -32,7 +32,7 @@ An import attribute is an object-like key value pair, e.g. `type: "json"` in `im
 
 ```js
 extend interface ExportNamedDeclaration {
-    attributes: [ ImportAttribute ];
+    attributes: [ ImportAttribute ] | null;
 }
 ```
 - `attributes` must be an empty array when `source` is `null`.
@@ -41,7 +41,7 @@ extend interface ExportNamedDeclaration {
 
 ```js
 extend interface ExportAllDeclaration {
-    attributes: [ ImportAttribute ];
+    attributes: [ ImportAttribute ] | null;
 }
 ```
 
